homelab/authentik/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: authentik
  namespace: authentik
  annotations:
    argocd.argoproj.io/sync-wave: "16"
    argocd.argoproj.io/sync-options: ServerSideApply=true
spec:
  forwardAuth:
    address: http://authentik-worker.authentik.svc:9000/outpost.goauthentik.io/auth/traefik
    trustForwardHeader: true
    maxResponseBodySize: 10485760
    authResponseHeaders:
      - X-authentik-username
      - X-authentik-groups
      - X-authentik-email
      - X-authentik-name
      - X-authentik-uid
      - X-authentik-jwt
      - X-authentik-meta-jwks
      - X-authentik-meta-outpost
      - X-authentik-meta-provider
      - X-authentik-meta-app
      - X-authentik-meta-version
