homelab/authentik/ocis-ldap-outpost.yaml
apiVersion: v1
kind: Service
metadata:
  name: ocis-ldap-outpost
  namespace: authentik
  labels:
    app.kubernetes.io/instance: ocis-ldap-outpost
    app.kubernetes.io/name: authentik-outpost
spec:
  selector:
    app.kubernetes.io/instance: ocis-ldap-outpost
    app.kubernetes.io/name: authentik-outpost
  ports:
    - name: http
      port: 9000
      targetPort: http
    - name: ldap
      port: 3389
      targetPort: ldap
    - name: ldaps
      port: 6636
      targetPort: ldaps
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ocis-ldap-outpost
  namespace: authentik
  labels:
    app.kubernetes.io/instance: ocis-ldap-outpost
    app.kubernetes.io/name: authentik-outpost
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: ocis-ldap-outpost
      app.kubernetes.io/name: authentik-outpost
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: ocis-ldap-outpost
        app.kubernetes.io/name: authentik-outpost
    spec:
      containers:
        - name: proxy
          image: ghcr.io/goauthentik/ldap:2026.5.6
          ports:
            - name: http
              containerPort: 9000
            - name: ldap
              containerPort: 3389
            - name: ldaps
              containerPort: 6636
          readinessProbe:
            tcpSocket:
              port: ldap
          livenessProbe:
            tcpSocket:
              port: ldap
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
