homelab/authentik/allow-ocis-ldap.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ocis-proxy-to-ldap-outpost
  namespace: authentik
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: ocis-ldap-outpost
      app.kubernetes.io/name: authentik-outpost
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ocis
          podSelector:
            matchLabels:
              app: proxy
      ports:
        - protocol: TCP
          port: 3389
  policyTypes:
    - Ingress
